update html&css contents

--- a/HTML&CSS/index.html
+++ b/HTML&CSS/index.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Practice In HTML</title>
 </head>
 <body>
-    
+    <!-- semantic tag -->
+    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, cumque.</article>
+    <form action="" class="user-form">
+        <input type="text" name="" id="" placeholder="user name">
+        <input type="password" name="" id="" placeholder="password">
+        <input type="submit" value="Login">
+    </form>
+    <table>
+        <tr>
+            <th>Student name</th>
+            <th>Student id </th>
+            <th>Student Phone Number </th>
+        </tr>
+        <tr>
+            <td>Rohim</td>
+            <td>001</td>
+            <td>01722365542</td>
+        </tr>
+    </table>
+    <hr>
+
+    <!-- non-sematic tag -->
+    <div>
+        <span>Lorem ipsum dolor sit amet.</span>
+    </div>
+    <hr>
+
+    <!-- inline element -->
+    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt ipsa culpa commodi ratione alias eveniet, recusandae vitae illo cupiditate incidunt.</span>
+    <a href="www.google.com">click here to visit</a>
+    <hr>
+
+    <!-- block element -->
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, architecto. Amet ducimus ipsa magni soluta facilis, cupiditate maiores enim cumque, at itaque dicta hic excepturi sapiente. Accusantium, modi dicta! Deserunt eius maxime repudiandae est, natus aut ipsum distinctio numquam pariatur sapiente consectetur, doloremque quia consequuntur. Saepe expedita distinctio tempore placeat, vitae laudantium impedit quod iure id reiciendis est ut tempora? Eum rerum tempora sed pariatur nemo ipsum voluptatum et beatae quo, explicabo numquam rem nesciunt laborum odio minus quas ipsam praesentium expedita. Error totam molestias atque quam corrupti facilis nisi, eius, eum porro voluptates omnis repellendus consectetur. Pariatur, fugiat commodi.</p>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque in fuga delectus ut? Corporis aliquam autem, est natus sapiente mollitia.</p>
+    </div>
+    <hr>
+
+    <!-- attributes -->
+    <a href="www.google.com">click to visit google</a> <br>
+    <img src="https://img.freepik.com/free-photo/lone-tree_181624-46361.jpg?w=740&t=st=1692019990~exp=1692020590~hmac=0d4df66c27a3d9f5b5a75e823d004c39c327b7403ea420ec279ef21a401ebaac" class="content-images" alt="online image">
+    <hr>
+
+    <!-- css selector -->
+    <h2>Hello, I'm Rasel.</h2>
+    <h2 class="safat">Hello, I'm Safat.</h2>
+    <h2 id="sohag">Hello, I'm Sohag.</h2>
+    <hr>
+
+    <!-- box model -->
+    <h4 id="box-model">Lorem ipsum dolor sit amet.</h4>
+    <hr>
+
+    <!-- flexbox -->
+    <div id="flex-content">
+        <h1>Conten1</h1>
+        <h1>Conten2</h1>
+        <h1>Conten3</h1>
+        <h1>Conten4</h1>
+    </div>
+    <hr>
+
+    <!-- grid layout system -->
+    <div id="grid-content">
+        <h3>grid content 1</h3>
+        <h3>grid content 2</h3>
+        <h3>grid content 3</h3>
+        <h3>grid content 4</h3>
+        <h3>grid content 5</h3>
+        <h3>grid content 6</h3>
+    </div>
+
 </body>
 </html>
